<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="com.exercise.cvapp.view.viewmodel.ProfileViewModel"/>
    </data>
    <androidx.cardview.widget.CardView android:id="@+id/card_view"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_margin="2dp"
                                       app:cardElevation="1dp">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginStart="16dp">
            <TextView
                    android:id="@+id/skills_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/environment_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
            <TextView
                    android:id="@+id/environment_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/environment"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/skills_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/environment"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="4dp"/>
            <TextView
                    android:id="@+id/environment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="environment"
                    app:layout_constraintTop_toBottomOf="@+id/environment_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/methodology_label"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"/>
            <TextView
                    android:id="@+id/methodology_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/methodologies"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/environment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/methodology"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="4dp"/>
            <TextView
                    android:id="@+id/methodology"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="methodology"
                    app:layout_constraintTop_toBottomOf="@+id/methodology_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/technologies_label"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"/>
            <TextView
                    android:id="@+id/technologies_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/technologies"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/methodology"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/technologies"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="4dp"/>
            <TextView
                    android:id="@+id/technologies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="language"
                    app:layout_constraintTop_toBottomOf="@+id/technologies_label"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/languages_label"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@+id/languages_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/programming_languages"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/technologies"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/languages"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="4dp"/>
            <TextView
                    android:id="@+id/languages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="language"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/languages_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>